<resources>
    <string name="app_name">shopping</string>
    <string name="title_home">首页</string>
    <string name="title_zhuanti">专题</string>
    <string name="title_fenlei">分类</string>
    <string name="title_shopping">购物</string>
    <string name="title_mine">我的</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">这是购物页面</string>
</resources>
