<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_selector"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_zhuanti"
        android:icon="@drawable/ic_topic_selector"
        android:title="@string/title_zhuanti" />

    <item
        android:id="@+id/navigation_fenlei"
        android:icon="@drawable/ic_sort_selector"
        android:title="@string/title_fenlei" />
    <item
        android:id="@+id/navigation_shopping"
        android:icon="@drawable/ic_shoping_selector"
        android:title="@string/title_shopping" />
    <item
        android:id="@+id/navigation_mine"
        android:icon="@drawable/ic_me_selector"
        android:title="@string/title_mine" />

</menu>
